疏通casbin和bearer token关系
